# paradigm

./: .appveyor.yml  .azure-pipelines.yml  .bumpversion.cfg  .coveragerc  .env  .gitignore  .pre-commit-config.yaml  .travis.yml  Dockerfile  MANIFEST.in  README.md  docker-compose.cpython.yml  docker-compose.pypy.yml  docker-compose.yml  pyproject.toml  requirements-tests.txt  requirements.txt  run-tests.ps1  run-tests.sh  setup.cfg  setup.py
.github/workflows/: ci.yml
paradigm/: __init__.py  arboretum.py  base.py  cached.py  catalog.py  conversion.py  dictionaries.py  discovery.py  file_system.py  hints.py  importing.py  models.py  modules.py  names.py  namespaces.py  qualified.py  signatures.py  sources.py  utils.py
paradigm/_core/: annotated.py  caching.py  catalog.py  discovery.py  execution.py  exporting.py  file_system.py  hints.py  index.py  models.py  modules.py  names.py  namespaces.py  namespacing.py  pretty.py  qualified.py  scoping.py  signatures.py  sources.py  stubs.py  utils.py
paradigm/arboretum/: __init__.py  base.py  construction.py  conversion.py  data_access.py  evaluation.py  examination.py  execution.py  hints.py  importing.py  leveling.py  logical.py  namespaces.py  reduction.py  scoping.py  utils.py
paradigm/definitions/: __init__.py  base.py  unsupported.py  utils.py
tests/: configs.py  conftest.py  contracts.py  test_signatures.py  unsupported.py  utils.py
tests/base_tests/: strategies.py  test_signature_from_callable.py
tests/catalog_tests/: strategies.py  test_is_attribute.py
tests/definitions_tests/: strategies.py  (+2 more)
(+76 files in other folders)
